fix grid overlapping

--- a/app/common-styles/_2.layout.scss
+++ b/app/common-styles/_2.layout.scss
@@ -4,3 +4,7 @@
 
 // Consider adding sensible grid for grid and responsiveness
 @include sensibleGrid();
+
+.l-grid-wrap {
+  overflow: hidden;
+}
